--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="navbar">
+            <img src="../img/logo_bookmark.png" alt="some_text">
+        <p>Hello world! This is HTML5 Boilerplate. weee </p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
