--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -23,8 +26,10 @@
 
         <!-- Add your site or application content here -->
         <div class="navbar">
-            <img src="../img/logo_bookmark.png" alt="some_text">
+            <img src="http://maddiesimens.github.io/img/logo_bookmark.png" alt="logo" id="logo">
+
         <p>Hello world! This is HTML5 Boilerplate. weee </p>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
