--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="navbar">
             <img src="http://maddiesimens.github.io/img/logo_bookmark.png" alt="logo" id="logo">
 
-        <p>Hello world! This is HTML5 Boilerplate. weee </p>
+        <p>ABOUT   WORK   BLOG   CONTACT</p>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
