--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
 
         <!-- Add your site or application content here -->
         <div class="navbar">
-            <img src="http://maddiesimens.github.io/img/logo_bookmark.png" alt="logo" id="logo">
-
-        <p>ABOUT   WORK   BLOG   CONTACT</p>
+            <!-- <img src="http://maddiesimens.github.io/img/logo_bookmark.png" alt="logo" id="logo"> -->
+        <div id="nav">
+        <a href="#"><img src="http://maddiesimens.github.io/img/logo_bookmark.png" id="logo"></a>
+            <ul id="navigation">
+               <li><a href="#">ABOUT</a></li>
+                <li><a href="#">WORK</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
