--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <!-- Add your site or application content here -->
         <div class="navbar">
             <!-- <img src="http://maddiesimens.github.io/img/logo_bookmark.png" alt="logo" id="logo"> -->
-        <div id="nav">
-        <a href="#"><img src="http://maddiesimens.github.io/img/logo_bookmark.png" id="logo"></a>
+        <a name="home"><div id="nav">
+        <a href="#home"><img src="http://maddiesimens.github.io/img/logo_bookmark.png" id="logo"></a>
             <ul id="navigation">
-               <li><a href="#">ABOUT</a></li>
-                <li><a href="#">WORK</a></li>
+               <li><a href="#about">ABOUT</a></li>
+                <li><a href="#work">WORK</a></li>
                 <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
-        </div>
+        </div></a>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
