--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         </div></a>
         </div>
 
+        <div id="home">
+            <p id="headline_name">Hi, I'm Maddie Simens.</p>
+            <p id="headline">Aspiring UX designer and lifelong apprentice.</p>
+            <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_light.png" id="home_arrow"></a>
+        </div>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
