--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <p id="headline">Aspiring UX designer and lifelong apprentice.</p>
             <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_light.png" id="home_arrow"></a>
         </div>
-
+        <a name="about"><div id="about"></a>
+            <img src="http://maddiesimens.github.io/img/title_about.png" id="title_about">
+        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
