--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         </div>
         <a name="about"><div id="about"></a>
             <img src="http://maddiesimens.github.io/img/title_about.png" id="title_about">
+            <p id="about_copy1">Student by name and by nature. I am currently in my third year at Northeastern University studying business and interactive media. Here is an excerpt of the very long list of things that I love: user experience design, thoughtful companies, nerdy people, minimalism, books, fettucine alfredo, and Formula 1 racing. </p>
+            <p id="about_copy2">When I grow up, I want to be a UX designer.<br>And/or Harry Potter.</p>
+            <img src="http://maddiesimens.github.io/img/refresh_headshot.png" id="headshot">
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
