--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
             <p id="about_copy2">When I grow up, I want to be a UX designer.<br>And/or Harry Potter.</p>
             <img src="http://maddiesimens.github.io/img/refresh_headshot.png" id="headshot">
         </div>
+        <a name="work"><div id="work"></a>
+            <img src="http://maddiesimens.github.io/img/title_work.png" id="title_work">
+            <p id="work_copy1">I've had the privilege of working with some ferociously smart and humble people on projects that I believe in, and I'm hungry for more.</p>
+            <p id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, you can check out my profile on LinkedInor download my resume here.</p>
+        </div>
+        <a name="contact"><div id="contact"></a>
+            <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
+            <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at maddiesimens@gmail.com or find me at one of my favorite e-haunts.</p>
+        </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
