resume pdf troubleshooting

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a name="work"><div id="work"></a>
             <img src="http://maddiesimens.github.io/img/title_work.png" id="title_work">
             <p id="work_copy1">I've had the privilege of working with some ferociously smart and humble people on projects that I believe in, and I'm hungry for more.</p>
-            <p id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link">LinkedIn</a> or <br>download my resume <a href="http://maddiesimens.github.io/MaddieSimens_resume.pdf" id="resume_link">here.</a></p>
+            <p id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link">here.</a></p>
         </div>
         <a name="contact"><div id="contact"></a>
             <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
