switch arrow for dark version

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="home">
             <p id="headline_name">Hi, I'm Maddie Simens.</p>
             <p id="headline">Aspiring UX designer and lifelong apprentice.</p>
-            <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_light.png" id="home_arrow"></a>
+            <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
         </div>
         <a name="about"><div id="about"></a>
             <img src="http://maddiesimens.github.io/img/title_about.png" id="title_about">
