--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
 
         <div id="home">
-            <p id="headline_name">Hi, I'm Maddie Simens.</p>
-            <p id="headline">Aspiring UX designer and lifelong apprentice.</p>
+            <p id="headline_name">Hi, I'm Maddie Simens,</p>
+            <p id="headline">aspiring UX designer and lifelong apprentice.</p>
             <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
         </div>
         <a name="about"><div id="about"></a>
@@ -56,6 +56,7 @@
         <a name="contact"><div id="contact"></a>
             <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
             <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at maddiesimens@gmail.com or find me at one of my favorite e-haunts.</p>
+            <a href="https://twitter.com/maddiesimens"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
