--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <head>
         <script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+        </script>
+        <script type="text/javascript">
+            $(window).load(function(){ 
+                $('div.headline_text').fadeIn(4000);
+            });
+        </script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
@@ -38,9 +45,11 @@
         </div>
 
         <div id="home">
+            <div class="headdline_text">
             <p id="headline_name">Hi, I'm Maddie Simens,</p>
             <p id="headline">aspiring UX designer and lifelong apprentice.</p>
             <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
+            </div>
         </div>
         <a name="about"><div id="about"></a>
             <img src="http://maddiesimens.github.io/img/title_about.png" id="title_about">
@@ -56,7 +65,7 @@
         <a name="contact"><div id="contact"></a>
             <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
             <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at <a href="mailto:maddiesimens@gmail.com?subject=Hi" id="email">maddiesimens@gmail.com</a> or find me at one of my favorite e-haunts.</p>
-            <a href="https://twitter.com/maddiesimens"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a><a href="http://www.linkedin.com/in/madelinesimens"><img src="http://maddiesimens.github.io/img/linkedin.png" id="linkedin"></a><img src="http://maddiesimens.github.io/img/medium.png" id="medium">
+            <a href="https://twitter.com/maddiesimens"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a><a href="http://www.linkedin.com/in/madelinesimens"><img src="http://maddiesimens.github.io/img/linkedin.png" id="linkedin"></a><a href="https://medium.com/@maddiesimens"><img src="http://maddiesimens.github.io/img/medium.png" id="medium"></a>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
@@ -72,5 +81,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
+
     </body>
 </html>
