--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
-        </script>
-        <script type="text/javascript">
-            $(window).load(function(){ 
-                $('div.headline_text').fadeIn(4000);
-            });
-        </script>
+        <script src="js/fadein.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
