--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <script src="js/fadein.js"></script>
+        <script src="http://maddiesimens.github.io/js/fadein.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
@@ -40,7 +40,7 @@
         </div>
 
         <div id="home">
-            <div class="headdline_text">
+            <div class="headline_text">
             <p id="headline_name">Hi, I'm Maddie Simens,</p>
             <p id="headline">aspiring UX designer and lifelong apprentice.</p>
             <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
