--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul id="navigation">
                <li><a href="#about">ABOUT</a></li>
                 <li><a href="#work">WORK</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="#"> BLOG</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div></a>
@@ -41,8 +41,8 @@
 
         <div id="home">
             <div class="headline_text">
-            <p id="headline_name">Hi, I'm Maddie Simens,</p>
-            <p id="headline">aspiring UX designer and lifelong apprentice.</p>
+            <p id="headline_name">Hi, I'm Maddie Simens.</p>
+            <p id="headline">I'm an aspiring UX designer and lifelong apprentice.</p>
             <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
             </div>
         </div>
