--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at <a href="mailto:maddiesimens@gmail.com?subject=Hi" id="email">maddiesimens@gmail.com</a> or find me at one of my favorite e-haunts.</p>
             <a href="https://twitter.com/maddiesimens"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a><a href="http://www.linkedin.com/in/madelinesimens"><img src="http://maddiesimens.github.io/img/linkedin.png" id="linkedin"></a><a href="https://medium.com/@maddiesimens"><img src="http://maddiesimens.github.io/img/medium.png" id="medium"></a>
         </div>
-        <div id="footer">THIS SITE WAS BUILT ON A SNOWED-IN SUNDAY.</div>
+        <div id="footer">THIS SITE WAS BUILT ON A SNOWED-IN SUNDAY</div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
