Set contact section to left align and play with divs for work section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,18 @@
             <p id="about_copy2">When I grow up, I want to be a UX designer.<br>And/or Harry Potter.</p>
             <img src="http://maddiesimens.github.io/img/refresh_headshot.png" id="headshot">
         </div>
-        <a name="work"><div id="work"></a>
+        <a name="work">
+    <div id="container">
+        <div id="work"></a>
             <img src="http://maddiesimens.github.io/img/title_work.png" id="title_work">
-            <p id="work_copy1">I've had the privilege of working with some ferociously smart and humble people on projects that I believe in, and I'm hungry for more.</p>
-            <p id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link">here.</a></p>
+            <div id="work_copy1">I've had the privilege of working with some ferociously smart and humble people on projects that I believe in, and I'm hungry for more.</div>
+            <div id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link">here.</a></div>
+            </div>
+            <div id="experience">
+                <img src="http://maddiesimens.github.io/img/neu.png" id="logo_neu">
+            </div>
         </div>
+        
         <a name="contact"><div id="contact"></a>
             <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
             <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at <a href="mailto:maddiesimens@gmail.com?subject=Hi" id="email">maddiesimens@gmail.com</a> or find me at one of my favorite e-haunts.</p>
