work experience section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
             <div id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link">here.</a></div>
             </div>
             <div id="experience">
-                <img src="http://maddiesimens.github.io/img/neu.png" id="logo_neu">
+                <!-- <img src="http://maddiesimens.github.io/img/neu.png" id="logo_neu"> -->
+                <div id="company_neu">NORTHEASTERN UNIVERSITY</div>
+                <div id="position_neu">Entrepreneurship Minor</div>
+                <div id="company_wistia">WISTIA</div>
+                <div id="position_wistia">Customer Happiness & UX</div>
+                <div id="company_eclub">NORTHEASTERN ENTREPRENEURS CLUB</div>
+                <div id="position_eclub">Husky Startup Challenge</div>
+                <div id="company_lh">LAUNCHHOUSE</div>
+                <div id="position_lh">Marketing & Curriculum</div>
             </div>
         </div>
         
