last commit before bed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul id="navigation">
                <li><a href="#about">ABOUT</a></li>
                 <li><a href="#work">WORK</a></li>
-                <li><a href="#"> BLOG</a></li>
+                <li><a href="https://medium.com/@maddiesimens"> BLOG</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div></a>
@@ -43,11 +43,11 @@
         <div id="home">
             <div class="headline_text">
             <p id="headline_name">Hi, I'm Maddie Simens.</p>
-            <p id="headline">I'm an aspiring UX designer and lifelong apprentice.</p>
+            <a name="about"><p id="headline">I'm an aspiring UX designer and lifelong apprentice.</p></a>
             <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
             </div>
         </div>
-        <a name="about"><div id="about"></a>
+        <div id="about">
             <img src="http://maddiesimens.github.io/img/title_about.png" id="title_about">
             <p id="about_copy1">Student by name and by nature. I am currently in my third year at Northeastern University studying business and interactive media. Here is an excerpt of the very long list of things that I love: user experience design, thoughtful companies, nerdy people, minimalism, books, fettucine alfredo, and Formula 1 racing. </p>
             <p id="about_copy2">When I grow up, I want to be a UX designer.<br>And/or Harry Potter.</p>
