Switch home screen to dark color palette

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="headline_text">
             <p id="headline_name">Hi, I'm Maddie Simens.</p>
             <a name="about"><p id="headline">I'm an aspiring UX designer and lifelong apprentice.</p></a>
-            <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_dark.png" id="home_arrow"></a>
+            <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_light.png" id="home_arrow"></a>
             </div>
         </div>
         <div id="about">
