--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
-        <!-- <script type="text/javascript" src="js/smoothscroll.js"></script> -->
+        <script type="text/javascript" src="js/smoothscroll.js"></script>
         <script type="text/javascript" src="js/SinglePageNav.js">
             $('#nav').singlePageNav();
         </script>
