--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul id="navigation">
                <li><a href="#about">ABOUT</a></li>
                 <li><a href="#work">WORK</a></li>
-                <li><a href="https://medium.com/@maddiesimens"> BLOG</a></li>
+                <li><a href="https://medium.com/@maddiesimens" target="_blank"> BLOG</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </div></a>
@@ -71,7 +71,7 @@
         <div id="work"></a>
             <img src="http://maddiesimens.github.io/img/title_work.png" id="title_work">
             <div id="work_copy1">I've had the privilege of working with some ferociously smart and humble people on projects that I believe in, and I'm hungry for more.</div>
-            <div id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link">here.</a></div>
+            <div id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link" target="_blank">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link" target="_blank">here.</a></div>
             </div>
             <div id="experience">
                 <!-- <img src="http://maddiesimens.github.io/img/neu.png" id="logo_neu"> -->
@@ -89,7 +89,7 @@
         <a name="contact"><div id="contact"></a>
             <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
             <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at <a href="mailto:maddiesimens@gmail.com?subject=Hi" id="email">maddiesimens@gmail.com</a> or find me at one of my favorite e-haunts.</p>
-            <a href="https://twitter.com/maddiesimens"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a><a href="http://www.linkedin.com/in/madelinesimens"><img src="http://maddiesimens.github.io/img/linkedin.png" id="linkedin"></a><a href="https://medium.com/@maddiesimens"><img src="http://maddiesimens.github.io/img/medium.png" id="medium"></a>
+            <a href="https://twitter.com/maddiesimens" target="_blank"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a><a href="http://www.linkedin.com/in/madelinesimens"><img src="http://maddiesimens.github.io/img/linkedin.png" id="linkedin" target="_blank"></a><a href="https://medium.com/@maddiesimens"><img src="http://maddiesimens.github.io/img/medium.png" id="medium" target="_blank"></a>
         </div>
         <div id="footer"><img src="http://maddiesimens.github.io/img/logo_footer.png" id="logo_footer">THIS SITE WAS BUILT ON A SNOWED-IN SUNDAY</div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
