--- a/beerlympics.html
+++ b/beerlympics.html
@@ -13,20 +13,20 @@
 
 <body>
 	<ul id="nav">
-		<li><a href="#intro" title="Next Section"><img src="images/dot.png" alt="Link" /></a></li>
-	    <li><a href="#second" title="Next Section"><img src="images/dot.png" alt="Link" /></a></li>
-	    <li><a href="#third" title="Next Section"><img src="images/dot.png" alt="Link" /></a></li>
-	    <li><a href="#fourth" title="Next Section"><img src="images/dot.png" alt="Link" /></a></li>
-	    <li><a href="#sixth" title="Next Section"><img src="images/dot.png" alt="Link" /></a></li>
-	    <li><a href="#fifth" title="Next Section"><img src="images/dot.png" alt="Link" /></a></li>
+		<li><a href="#intro" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+	    <li><a href="#second" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+	    <li><a href="#third" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+	    <li><a href="#fourth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+	    <li><a href="#sixth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+	    <li><a href="#fifth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
 	</ul>
 
 <section id="pin" class="scroll-magic-section">
 	<div id="intro">
 		<div class="story">
 			<div class="text">
-				<img src="images/ball.png" id="ball" class="animated fadeIn">
-				<img src="images/logo_noball.png" id="logo" class="animated fadeIn">
+				<img src="img/ball.png" id="ball" class="animated fadeIn">
+				<img src="img/logo_noball.png" id="logo" class="animated fadeIn">
 	        </div>
 	    </div> <!--.story-->
 	</div> <!--#intro-->
@@ -47,7 +47,7 @@
 	    	<div class="text">
 	    		<p>of</p>
 	        	<h2>BEER</h2>
-	        	<img src="images/cups.png" id="cups">
+	        	<img src="img/cups.png" id="cups">
 	        </div>
 	    </div> <!--.story-->
 	</div> <!--#third-->
@@ -72,13 +72,13 @@
 	        	<h2>DETAILS</h2>
 	        	<div id="cup_container">
 		        	<div class="flipcup">
-		        		<img src="images/cup_single_square.png" id="cup">
+		        		<img src="img/cup_single_square.png" id="cup">
 		        	</div>
 		        	<div class="flipcup">
-		        		<img src="images/cup_single_square.png" id="cup">
+		        		<img src="img/cup_single_square.png" id="cup">
 		        	</div>
 		        	<div class="flipcup">
-		        		<img src="images/cup_single_square.png" id="cup">
+		        		<img src="img/cup_single_square.png" id="cup">
 		        	</div>
 		        </div>
 		        <div id="details_container">
@@ -175,14 +175,14 @@
 </section>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-<script type="text/javascript" src="scripts/jquery.parallax-1.1.3.js"></script>
-<script type="text/javascript" src="scripts/jquery.localscroll-1.2.7-min.js"></script>
-<script type="text/javascript" src="scripts/jquery.scrollTo-1.4.2-min.js"></script>
+<script type="text/javascript" src="js/jquery.parallax-1.1.3.js"></script>
+<script type="text/javascript" src="js/jquery.localscroll-1.2.7-min.js"></script>
+<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
 
-<script type="text/javascript" src="scripts/TweenMax.min.js"></script>
-<script type="text/javascript" src="scripts/jquery.scrollmagic.js"></script>
-<script type="text/javascript" src="scripts/jquery.scrollmagic.debug.js"></script>
+<script type="text/javascript" src="js/TweenMax.min.js"></script>
+<script type="text/javascript" src="js/jquery.scrollmagic.js"></script>
+<script type="text/javascript" src="js/jquery.scrollmagic.debug.js"></script>
 
-<script type="text/javascript" src="scripts/javascript.js"></script>
+<script type="text/javascript" src="js/javascript.js"></script>
 </body>
 </html>
