add typekit scripts

--- a/beerlympics.html
+++ b/beerlympics.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Beerlympics 2014</title>
-<link href="beer_style.css" rel="stylesheet" type="text/css" />
-<link href="css/animate.css" rel="stylesheet" type="text/css">
-<link href="css/structure.css" rel="stylesheet">
-<link href="css/form.css" rel="stylesheet">
-<link href="css/theme.css" rel="stylesheet">
+	<script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Beerlympics 2014</title>
+	<link href="beer_style.css" rel="stylesheet" type="text/css" />
+	<link href="css/animate.css" rel="stylesheet" type="text/css">
+	<link href="css/structure.css" rel="stylesheet">
+	<link href="css/form.css" rel="stylesheet">
+	<link href="css/theme.css" rel="stylesheet">
 
 </head>
 
