switched mixed-up divs

--- a/beerlympics.html
+++ b/beerlympics.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Beerlympics 2014</title>
+	<script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<link href="beer_style.css" rel="stylesheet" type="text/css" />
 	<link href="css/animate.css" rel="stylesheet" type="text/css">
 	<link href="css/structure.css" rel="stylesheet">
 	<link href="css/form.css" rel="stylesheet">
 	<link href="css/theme.css" rel="stylesheet">
-
 </head>
 
 <body>
 	<ul id="nav">
-		<li><a href="#intro" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
-	    <li><a href="#second" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
-	    <li><a href="#third" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
-	    <li><a href="#fourth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
-	    <li><a href="#sixth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
-	    <li><a href="#fifth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+		<li><a href="#intro" title="Next Section"><img src="img/dot.png" alt="Link"></a></li>
+	    <li><a href="#second" title="Next Section"><img src="img/dot.png" alt="Link"></a></li>
+	    <li><a href="#third" title="Next Section"><img src="img/dot.png" alt="Link"></a></li>
+	    <li><a href="#fourth" title="Next Section"><img src="img/dot.png" alt="Link"></a></li>
+	    <li><a href="#fifth" title="Next Section"><img src="img/dot.png" alt="Link"></a></li>
+	    <li><a href="#sixth" title="Next Section"><img src="img/dot.png" alt="Link"></a></li>
 	</ul>
 
 <section id="pin" class="scroll-magic-section">
@@ -29,19 +28,16 @@
 			<div class="text">
 				<img src="img/ball.png" id="ball" class="animated fadeIn">
 				<img src="img/logo_noball.png" id="logo" class="animated fadeIn">
-	        </div>
+	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#intro-->
 	
 	<div id="second">
-		<div class="story"><div class="bg"></div>
+		<div class="story">
 	    	<div class="text">
-	            <h2></h2>
 	            <p>The Republic of Calumet requests the pleasure of your company and athletic prowess at the XXXI Olympic Games</p>
-	            <p></p>
-	        </div>
+	        </div> <!--.text-->
 	    </div> <!--.story-->
-	    
 	</div> <!--#second-->
 	
 	<div id="third">
@@ -50,7 +46,7 @@
 	    		<p>of</p>
 	        	<h2>BEER</h2>
 	        	<img src="img/cups.png" id="cups">
-	        </div>
+	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#third-->
 	
@@ -59,16 +55,14 @@
 			<div class="text">
 				<h2>ABOUT</h2>
 				<p>You’ve been training for years, you just didn’t know it.</p>
-
 				<p>Test the fleetness of your wrist and might of your belly at the inaugural olympiad of beer. The games will be held in 
 				tournament style, with teams of two partners representing the country of their choice. Teams are expected to dress in honor of their patron nation, and special favor will be granted to the most festive competitors. The tournament victors will be crowned and awarded a prize envied even by the gods.</p>
-
 				<p>Come with thirst, leave with glory.</p>
-			</div>
+			</div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#fourth-->
 
-	<div id="sixth">
+	<div id="fifth">
 		<div class="story">
 	    	<div class="text">
 	        	<h2>DETAILS</h2>
@@ -97,11 +91,11 @@
 		        		<p class="details">98 Calumet St., #2</p>
 		        	</div>
 		        </div>
-	        </div>
+	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#sixth-->
 
-	<div id="fifth">
+	<div id="sixth">
 		<div class="story">
 			<div class="text">
 				<h2>RSVP</h2>
