--- a/beerlympics.html
+++ b/beerlympics.html
@@ -78,15 +78,15 @@
 		        	</div>
 		        </div>
 		        <div id="details_container">
-		        	<div id="date">
+		        	<div class="details_third">
 		        		<h3>DATE</h3>
 		        		<p class="details">May 17th, 2014<p>
 		        	</div>
-		        	<div id="time">
+		        	<div class="details_third">
 		        		<h3>TIME</h3>
 		        		<p class="details">3:00 PM, sharp</p>
 		        	</div>
-		        	<div id="location">
+		        	<div class="details_third">
 		        		<h3>LOCATION</h3>
 		        		<p class="details">98 Calumet St., #2</p>
 		        	</div>
@@ -99,14 +99,10 @@
 		<div class="story">
 			<div class="text">
 				<h2>RSVP</h2>
-
 				<div id="container" class="ltr">
-
 					<form id="form1" name="form1" class="wufoo leftLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
 					      action="https://maddiesimens.wufoo.com/forms/z1xzp2tf0in5slj/#public">
-
 					<ul>
-
 					<li id="foli1" class="notranslate      ">
 					<label class="desc" id="title1" for="Field1">
 					Name
@@ -149,12 +145,9 @@
 					</div>
 					</li> <li class="buttons ">
 					<div>
-
-					                    <input id="saveForm" name="saveForm" class="btTxt submit" 
-					    type="submit" value="Submit"
-					 /></div>
+					    <input id="saveForm" name="saveForm" class="btTxt submit" 
+					    type="submit" value="Submit"/></div>
 					</li>
-
 					<li class="hide">
 					<label for="comment">Do Not Fill This Out</label>
 					<textarea name="comment" id="comment" rows="1" cols="1"></textarea>
@@ -162,11 +155,9 @@
 					</li>
 					</ul>
 					</form> 
-
-			</div>
+			</div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#fifth-->
-
 
 </section>
 
