--- a/beerlympics.html
+++ b/beerlympics.html
@@ -27,7 +27,7 @@
 		<div class="story">
 			<div class="text">
 				<img src="img/ball.png" id="ball" class="animated fadeIn">
-				<img src="img/logo_noball.png" id="logo" class="animated fadeIn">
+				<img src="img/logo_noball.png" id="intro_logo" class="animated fadeIn">
 	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#intro-->
@@ -45,7 +45,7 @@
 	    	<div class="text">
 	    		<p>of</p>
 	        	<h2>BEER</h2>
-	        	<img src="img/cups.png" id="cups">
+	        	<img src="img/cups.png" id="third_cups">
 	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#third-->
@@ -68,13 +68,13 @@
 	        	<h2>DETAILS</h2>
 	        	<div id="cup_container">
 		        	<div class="flipcup">
-		        		<img src="img/cup_single_square.png" id="cup">
+		        		<img src="img/cup_single_square.png" id="fifth_cup">
 		        	</div>
 		        	<div class="flipcup">
-		        		<img src="img/cup_single_square.png" id="cup">
+		        		<img src="img/cup_single_square.png" id="fifth_cup">
 		        	</div>
 		        	<div class="flipcup">
-		        		<img src="img/cup_single_square.png" id="cup">
+		        		<img src="img/cup_single_square.png" id="fifth_cup">
 		        	</div>
 		        </div>
 		        <div id="details_container">
