--- a/beerlympics.html
+++ b/beerlympics.html
@@ -45,7 +45,7 @@
 	    	<div class="text">
 	    		<p>of</p>
 	        	<h2>BEER</h2>
-	        	<img src="img/cups.png" id="third_cups">
+	        	<img src="img/cups2.png" id="third_cups">
 	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#third-->
@@ -57,7 +57,7 @@
 				<p>You’ve been training for years, you just didn’t know it.</p>
 				<p>Test the fleetness of your wrist and might of your belly at the inaugural olympiad of beer. The games will be held in 
 				tournament style, with teams of two partners representing the country of their choice. Teams are expected to dress in honor of their patron nation, and special favor will be granted to the most festive competitors. The tournament victors will be crowned and awarded a prize envied even by the gods.</p>
-				<p>Come with thirst, leave with glory.</p>
+				<p id="bold">Come with thirst, leave with glory.</p>
 			</div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#fourth-->
