--- a/beerlympics.html
+++ b/beerlympics.html
@@ -35,7 +35,7 @@
 	<div id="second">
 		<div class="story">
 	    	<div class="text">
-	            <p>The Republic of Calumet requests the pleasure of your company and athletic prowess at the XXXI Olympic Games</p>
+	            <p>The Republic of Calumet requests<br>the pleasure of your company and athletic prowess<br>at the XXXI Olympic Games</p>
 	        </div> <!--.text-->
 	    </div> <!--.story-->
 	</div> <!--#second-->
