--- a/index.html
+++ b/index.html
@@ -1,111 +1,65 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script type="text/javascript" src="//use.typekit.net/vkq3qco.js"></script>
-        <script type="text/javascript" src="js/smoothscroll.js"></script>
-        <script type="text/javascript" src="js/SinglePageNav.js">
-            $('#nav').singlePageNav();
-        </script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <script src="http://maddiesimens.github.io/js/fadein.js"></script>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Maddiesimens.GitHub.io by maddiesimens</title>
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Maddiesimens.GitHub.io</h1>
+        <p>Personal site refresh using github pages.</p>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-48335777-1', 'maddie.io');
-  ga('send', 'pageview');
+        <p class="view"><a href="https://github.com/maddiesimens">View My GitHub Profile</a></p>
 
-    </script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+      </header>
+      <section>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-        <!-- Add your site or application content here -->
-        <div class="navbar">
-            <!-- <img src="http://maddiesimens.github.io/img/logo_bookmark.png" alt="logo" id="logo"> -->
-        <a name="home"><div id="nav">
-        <a href="#home"><img src="http://maddiesimens.github.io/img/logo_bookmark.png" id="logo"></a>
-            <ul id="navigation">
-               <li><a href="#about">ABOUT</a></li>
-                <li><a href="#work">WORK</a></li>
-                <li><a href="https://medium.com/@maddiesimens" target="_blank"> BLOG</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-            </ul>
-        </div></a>
-        </div>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-        <div id="home">
-            <div class="headline_text">
-            <p id="headline_name">Hi, I'm Maddie Simens.</p>
-            <a name="about"><p id="headline">I'm an aspiring UX designer and lifelong apprentice.</p></a>
-            <a href="#about"><img src="http://maddiesimens.github.io/img/arrow_light.png" id="home_arrow"></a>
-            </div>
-        </div>
-        <div id="about">
-            <img src="http://maddiesimens.github.io/img/title_about.png" id="title_about">
-            <p id="about_copy1">Student by name and by nature. I am currently in my third year at Northeastern University studying business and interactive media. Here is an excerpt of the very long list of things that I love: user experience design, thoughtful companies, nerdy people, minimalism, books, fettucine alfredo, and Formula 1 racing. </p>
-            <p id="about_copy2">When I grow up, I want to be a UX designer.<br>And/or Harry Potter.</p>
-            <img src="http://maddiesimens.github.io/img/refresh_headshot.png" id="headshot">
-        </div>
-        <a name="work">
-    <div id="container">
-        <div id="work"></a>
-            <img src="http://maddiesimens.github.io/img/title_work.png" id="title_work">
-            <div id="work_copy1">I've had the privilege of working with some ferociously smart and humble people on projects that I believe in, and I'm hungry for more.</div>
-            <div id="work_copy2">These are a few of my most recent adventures. For a more complete snapshot, <br>you can check out my profile on <a href="http://www.linkedin.com/in/madelinesimens" id="resume_link" target="_blank">LinkedIn</a> or <br>download my resume <a href="http://maddie.io/resume.pdf" id="resume_link" target="_blank">here.</a></div>
-            </div>
-            <div id="experience">
-                <!-- <img src="http://maddiesimens.github.io/img/neu.png" id="logo_neu"> -->
-                <div id="company_neu">NORTHEASTERN UNIVERSITY</div>
-                <div id="position_neu">Entrepreneurship Minor</div>
-                <div id="company_wistia">WISTIA</div>
-                <div id="position_wistia">Customer Happiness & UX</div>
-                <div id="company_eclub">NORTHEASTERN ENTREPRENEURS CLUB</div>
-                <div id="position_eclub">Husky Startup Challenge</div>
-                <div id="company_lh">LAUNCHHOUSE</div>
-                <div id="position_lh">Marketing & Curriculum</div>
-            </div>
-        </div>
-        
-        <a name="contact"><div id="contact"></a>
-            <img src="http://maddiesimens.github.io/img/title_contact.png" id="title_contact">
-            <p id="contact_copy">I'm also a pretty good listener and aspiring conversationalist. If you'd like to know more, you can email me at <a href="mailto:maddiesimens@gmail.com?subject=Hi" id="email">maddiesimens@gmail.com</a> or find me at one of my favorite e-haunts.</p>
-            <a href="https://twitter.com/maddiesimens" target="_blank"><img src="http://maddiesimens.github.io/img/twitter.png" id="twitter"></a><a href="http://www.linkedin.com/in/madelinesimens"><img src="http://maddiesimens.github.io/img/linkedin.png" id="linkedin" target="_blank"></a><a href="https://medium.com/@maddiesimens"><img src="http://maddiesimens.github.io/img/medium.png" id="medium" target="_blank"></a>
-        </div>
-        <div id="footer"><img src="http://maddiesimens.github.io/img/logo_footer.png" id="logo_footer">THIS SITE WAS BUILT ON A SNOWED-IN SUNDAY</div>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-    </body>
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
