--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Maddiesimens.GitHub.io by maddiesimens</title>
+    <title>Maddie Simens</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,18 +14,24 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Maddiesimens.GitHub.io</h1>
-        <p>Personal site refresh using github pages.</p>
-
-
-        <p class="view"><a href="https://github.com/maddiesimens">View My GitHub Profile</a></p>
-
+        <h1>
+        Hi, I'm Maddie Simens.<br>
+        I'm a student and<br>
+        aspiring product designer<br>
+        current based in Boston, MA.
+        </h1>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+        I believe in curiosity, sincerity, and simplicity. My happy place is anywhere that allows me to work on finding thoughtful solutions to interesting problems.
+        </h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>
+I've spent some time:<br>
++  Learning to make the Internet a little more human at <a href="https://www.rdio.com">Rdio</a> and <a href="http://wistia.com">Wistia</a><br>
++  Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com">LaunchHouse Accelerator</a><br>
++  Studying interaction design and business at <a href="http://www.northeastern.edu">Northeastern University</a>
+</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
