skeleton of new site

--- a/index.html
+++ b/index.html
@@ -5,44 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Maddie Simens</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6978754/648086/css/fonts.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+
+    <div id="splash">
       <header>
-        <h1>
-        Hi, I'm Maddie Simens.<br>
-        I'm a student and<br>
-        aspiring product designer<br>
-        current based in Boston, MA.
-        </h1>
+        <div id="intro">
+          <h1>
+          <span class="medium">Hi, I'm Maddie Simens.</span><br>
+          <h1 id="subheader">I'm a student and<br>
+          aspiring product designer<br>
+          currently based in Boston, MA.</h1>
+          </h1>
+          <div class="separator" id="first"></div>
+        </div>
       </header>
-      <section>
-        <h2>
-        I believe in curiosity, sincerity, and simplicity. My happy place is anywhere that allows me to work on finding thoughtful solutions to interesting problems.
+    </div>
+
+      <div id="about">
+        <div id="headline">
+          <h2>
+          I believe in curiosity, sincerity, and simplicity. My happy place is anywhere that allows me to work on finding thoughtful solutions to interesting problems.
+          </h2>
+        </div>
+
+        <div id="experience">
+          <div class="separator" id="second"></div>
+          <p>
+          I've spent some time:<br>
+          +   Learning to make the Internet a little more human at <a href="https://www.rdio.com">Rdio</a> and <a href="http://wistia.com">Wistia</a><br>
+          +   Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com">LaunchHouse Accelerator</a><br>
+          +   Studying interaction design and business at <a href="http://www.northeastern.edu">Northeastern University</a>
+          </p>
+        </div>
+
+        <div id="social">
+          <div class="separator" id="third"></div>
+            <p class="smallcaps">
+            <a href="https://twitter.com/maddiesimens">TWITTER</a><br>
+            <a href="https://www.linkedin.com/in/madelinesimens">LINKEDIN</a><br>
+            <a href="http://instagram.com/maddie_simens">INSTAGRAM</a><br>
+            <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
+            </p>
+        </div>
+
+        <h2 id="contact">
+        I've met some of my very favorite people over a cup of coffee.<br> maddiesimens@gmail.com
         </h2>
 
-<p>
-  I've spent some time:<br>
-  +  Learning to make the Internet a little more human at <a href="https://www.rdio.com">Rdio</a> and <a href="http://wistia.com">Wistia</a><br>
-  +  Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com">LaunchHouse Accelerator</a><br>
-  +  Studying interaction design and business at <a href="http://www.northeastern.edu">Northeastern University</a>
-</p>
-
-<p>
-  <a href="https://twitter.com/maddiesimens">TWITTER</a><br>
-  <a href="https://www.linkedin.com/in/madelinesimens">LINKEDIN</a><br>
-  <a href="http://instagram.com/maddie_simens">INSTAGRAM</a><br>
-  <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
-</p>
-
-<h2>
-I've met some of my very favorite people over a cup of coffee. maddiesimens@gmail.com
-</h2>
+      </div>
 
       </section>
       <footer>
