--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="intro">
           <h1>
           <span class="medium">Hi, I'm Maddie Simens.</span><br>
-          <h1 id="subheader">I'm a student and<br>
+          I'm a student and<br>
           aspiring product designer<br>
           currently based in Boston, MA.</h1>
           </h1>
