more whitespace tweaks

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div id="experience">
           <div class="separator" id="second"></div>
           <p>
-          I've spent some time:<br>
-          +&nbsp; &nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com">Rdio</a> and <a href="http://wistia.com">Wistia</a><br>
-          +&nbsp; &nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com">LaunchHouse Accelerator</a><br>
-          +&nbsp; &nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu">Northeastern University</a>
+          <span style="line-height:3">I've spent some time:</span><br>
+          +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com">Rdio</a> and <a href="http://wistia.com">Wistia</a><br>
+          +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com">LaunchHouse Accelerator</a><br>
+          +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu">Northeastern University</a>
           </p>
         </div>
 
