lighten underline style

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <h2 id="contact">
-        I've met some of my very favorite people over a cup of coffee.<br> maddiesimens@gmail.com
+        I've met some of my very favorite people over a cup of coffee.<br> +&nbsp; maddiesimens@gmail.com
         </h2>
 
       </div>
