add link to rdio profile

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
             <a href="https://twitter.com/maddiesimens">TWITTER</a><br>
             <a href="https://www.linkedin.com/in/madelinesimens">LINKEDIN</a><br>
             <a href="http://instagram.com/maddie_simens">INSTAGRAM</a><br>
-            <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br>
+            <a href="https://www.rdio.com/people/maddiesimens">RDIO</a>
+            <!-- <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br> -->
             </p>
         </div>
 
         <h2 id="contact">
-        I've met some of my very favorite people over a cup of coffee.<br> +&nbsp; maddiesimens@gmail.com
+        I've met some of my very favorite<br> people over a cup of coffee.<br> +&nbsp; <span style="line-height:3">maddiesimens@gmail.com</span>
         </h2>
 
       </div>
