remove underline from social links

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <div id="social">
           <div class="separator" id="third"></div>
             <p class="smallcaps">
-            <a href="https://twitter.com/maddiesimens">TWITTER</a><br>
-            <a href="https://www.linkedin.com/in/madelinesimens">LINKEDIN</a><br>
-            <a href="http://instagram.com/maddie_simens">INSTAGRAM</a><br>
-            <a href="https://www.rdio.com/people/maddiesimens">RDIO</a>
+            <a class="smallcaps" href="https://twitter.com/maddiesimens">TWITTER</a><br>
+            <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens">LINKEDIN</a><br>
+            <a class="smallcaps" href="http://instagram.com/maddie_simens">INSTAGRAM</a><br>
+            <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens">RDIO</a>
             <!-- <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br> -->
             </p>
         </div>
