fix for link color

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <h2 id="contact">
-        I've met some of my very favorite<br> people over a cup of coffee.<br> +&nbsp; <span style="line-height:3">maddiesimens@gmail.com</span>
+        I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi">maddiesimens@gmail.com</a>
         </h2>
 
       </div>
