links should open in new tab

--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
           <div class="separator" id="second"></div>
           <p>
           <span style="line-height:3">I've spent some time:</span><br>
-          +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com">Rdio</a> and <a href="http://wistia.com">Wistia</a><br>
-          +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com">LaunchHouse Accelerator</a><br>
-          +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu">Northeastern University</a>
+          +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com" target="_blank">Rdio</a> and <a href="http://wistia.com" target="_blank">Wistia</a><br>
+          +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs" target="_blank">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com" target="_blank">LaunchHouse Accelerator</a><br>
+          +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu" target="_blank">Northeastern University</a>
           </p>
         </div>
 
         <div id="social">
           <div class="separator" id="third"></div>
             <p class="smallcaps">
-            <a class="smallcaps" href="https://twitter.com/maddiesimens">TWITTER</a><br>
-            <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens">LINKEDIN</a><br>
-            <a class="smallcaps" href="http://instagram.com/maddie_simens">INSTAGRAM</a><br>
-            <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens">RDIO</a>
+            <a class="smallcaps" href="https://twitter.com/maddiesimens" target="_blank">TWITTER</a><br>
+            <a class="smallcaps" href="https://www.linkedin.com/in/madelinesimens" target="_blank">LINKEDIN</a><br>
+            <a class="smallcaps" href="http://instagram.com/maddie_simens" target="_blank">INSTAGRAM</a><br>
+            <a class="smallcaps" href="https://www.rdio.com/people/maddiesimens" target="_blank">RDIO</a>
             <!-- <a href="mailto:maddiesimens@gmail.com?subject=Hi">EMAIL</a><br> -->
             </p>
         </div>
 
         <h2 id="contact">
-        I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi">maddiesimens@gmail.com</a>
+        I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi" target="_blank">maddiesimens@gmail.com</a>
         </h2>
 
       </div>
