--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
         <h2 id="contact">
         I've met some of my very favorite<br> people over a cup of coffee.<br> <a href="mailto:maddiesimens@gmail.com?subject=Hi" target="_blank">maddiesimens@gmail.com</a>
         </h2>
-
       </div>
 
-      </section>
       <footer>
+        <p class="smallcaps" id="copyright">
+          &copy; 2015 Maddie Simens
+        </p>
       </footer>
-    </div>
+      </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
 </html>
