take out "aspiring" for arjun

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div id="intro">
           <h1>
           <span class="medium">Hi, I'm Maddie Simens.</span><br>
-          I'm a student and<br>
-          aspiring product designer<br>
+          I'm a student and product designer<br>
           currently based in Boston, MA.</h1>
           </h1>
           <div class="separator" id="first"></div>
