change header copy

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1>
           <span class="medium">Hi, I'm Maddie Simens.</span><br>
           I'm a student and product designer<br>
-          currently based in Boston, MA.</h1>
+          based in Boston, MA.</h1>
           </h1>
           <div class="separator" id="first"></div>
         </div>
