more copy changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="intro">
           <h1>
           <span class="medium">Hi, I'm Maddie Simens.</span><br>
-          I'm a student and product designer<br>
-          based in Boston, MA.</h1>
+          I'm a student and product<br>
+          designer based in Boston, MA.</h1>
           </h1>
           <div class="separator" id="first"></div>
         </div>
