--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <span style="line-height:3">I've spent some time:</span><br>
           +&nbsp; Learning to make the Internet a little more human at <a href="https://www.rdio.com" target="_blank">Rdio</a> and <a href="http://wistia.com" target="_blank">Wistia</a><br>
           +&nbsp; Supporting startups at the <a href="http://www.northeastern.edu/entrepreneurs" target="_blank">Northeastern Entrepreneurs Club</a> and <a href="http://www.launchhouse.com" target="_blank">LaunchHouse Accelerator</a><br>
-          +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu" target="_blank">Northeastern University</a>
+          +&nbsp; Studying interaction design and business at <a href="http://www.northeastern.edu" target="_blank">Northeastern University</a><br>
+          +&nbsp; Obsessing over photography, film, interior design, and the Lord of the Rings
           </p>
         </div>
 
